force-app/main/default/objects/Asset/fields/Incoming_Request_Fire_No__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Request_Fire_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incoming Request (Fire) No</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Risks (Incoming Request (Fire) No)</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>