force-app/main/default/objects/Asset/fields/Indemnity_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Indemnity Agreement</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Risks (Indemnity Agreement)</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>