force-app/main/default/objects/Asset/fields/Indemnity_Agreement_No__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Agreement_No__c</fullName>
    <formula>SKEP_No__r.Indemnity_Agreement_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indemnity Agreement No</label>
    <type>Text</type>
</CustomField>