force-app/main/default/objects/Asset/fields/Indemnity_Type__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Type__c</fullName>
    <label>Indemnity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sum Insured</fullName>
            </value>
            <value>
                <fullName>New Reinstatement Value</fullName>
            </value>
            <value>
                <fullName>Replacement Value</fullName>
            </value>
            <value>
                <fullName>Sub-Limit</fullName>
            </value>
            <value>
                <fullName>First Loss</fullName>
            </value>
            <value>
                <fullName>Lost Limit</fullName>
            </value>
            <value>
                <fullName>Loss Limit - any one claim</fullName>
            </value>
            <value>
                <fullName>Loss Limit - aggregate any one claim</fullName>
            </value>
            <value>
                <fullName>Loss Limit - aggregate during period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>