force-app/main/default/objects/Asset/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>tidak jadi dipakai, refer to Utilization__c</description>
    <label>Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>