force-app/main/default/objects/Asset/fields/Industry_Conveyance_Type__c.field-meta.xml
<CustomField>
    <fullName>Industry_Conveyance_Type__c</fullName>
    <label>Industry/Conveyance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Vessel</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Air Transit</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Land Transit</label>
            </value>
            <value>
                <fullName>Inter-Insulair</fullName>
                <isActive>false</isActive>
                <label>Inter-Insulair</label>
            </value>
            <value>
                <fullName>Ocean Going</fullName>
                <isActive>false</isActive>
                <label>Ocean Going</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>