force-app/main/default/objects/Asset/fields/Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>