force-app/main/default/objects/Asset/fields/Interest_Insured_Detail_Description__c.field-meta.xml
<CustomField>
    <fullName>Interest_Insured_Detail_Description__c</fullName>
    <label>Interest Insured Detail Description</label>
    <type>TextArea</type>
</CustomField>