force-app/main/default/objects/Asset/fields/is_certificate_endorse__c.field-meta.xml
<CustomField>
    <fullName>is_certificate_endorse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is certificate endorse</label>
    <type>Checkbox</type>
</CustomField>