force-app/main/default/objects/Asset/fields/Is_Delete__c.field-meta.xml
<CustomField>
    <fullName>Is_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Delete</label>
    <type>Checkbox</type>
</CustomField>