force-app/main/default/objects/Asset/fields/is_life_insurance__c.field-meta.xml
<CustomField>
    <fullName>is_life_insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is life insurance</label>
    <type>Checkbox</type>
</CustomField>