force-app/main/default/objects/Asset/fields/jenis_perlengkapan__c.field-meta.xml
<CustomField>
    <fullName>jenis_perlengkapan__c</fullName>
    <label>jenis perlengkapan</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>