force-app/main/default/objects/Asset/fields/Joint_Retention_GR_Amount__c.field-meta.xml
<CustomField>
    <fullName>Joint_Retention_GR_Amount__c</fullName>
    <label>Joint Retention GR Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>