force-app/main/default/objects/Asset/fields/Joint_Retention_UR_Amount__c.field-meta.xml
<CustomField>
    <fullName>Joint_Retention_UR_Amount__c</fullName>
    <label>Joint Retention UR Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>