force-app/main/default/objects/Asset/fields/KARK__c.field-meta.xml
<CustomField>
    <fullName>KARK__c</fullName>
    <label>KARK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>