force-app/main/default/objects/Asset/fields/KARK_Amount__c.field-meta.xml
<CustomField>
    <fullName>KARK_Amount__c</fullName>
    <label>KARK Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>