force-app/main/default/objects/Asset/fields/Kegiatan_Kepabean__c.field-meta.xml
<CustomField>
    <fullName>Kegiatan_Kepabean__c</fullName>
    <label>Kegiatan Kepabean</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KITE</fullName>
            </value>
            <value>
                <fullName>OB 23</fullName>
            </value>
            <value>
                <fullName>Vooruitslag</fullName>
            </value>
            <value>
                <fullName>KABER/EPTE</fullName>
            </value>
            <value>
                <fullName>PPJK</fullName>
            </value>
            <value>
                <fullName>PJT</fullName>
            </value>
            <value>
                <fullName>SPTNP</fullName>
            </value>
            <value>
                <fullName>Angkut Lanjut</fullName>
            </value>
            <value>
                <fullName>TPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>