force-app/main/default/objects/Asset/fields/Lintaswata_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lintaswata_Amount__c</fullName>
    <label>Lintaswata Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>