force-app/main/default/objects/Asset/fields/Load_Capacity_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Load_Capacity_Tonnage__c</fullName>
    <label>Load Capacity/ Tonnage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>