force-app/main/default/objects/Asset/fields/MAIPARK__c.field-meta.xml
<CustomField>
    <fullName>MAIPARK__c</fullName>
    <label>MAIPARK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>