force-app/main/default/objects/Asset/fields/MAIPARK_Amount__c.field-meta.xml
<CustomField>
    <fullName>MAIPARK_Amount__c</fullName>
    <label>MAIPARK Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>