force-app/main/default/objects/Asset/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Risks (Model)</relationshipLabel>
    <relationshipName>Model</relationshipName>
    <type>Lookup</type>
</CustomField>