force-app/main/default/objects/Asset/fields/Model_Sepeda__c.field-meta.xml
<CustomField>
    <fullName>Model_Sepeda__c</fullName>
    <description>For COB 411</description>
    <label>Model Sepeda</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Mountain Bike</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Road Bike</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Cruiser / City Bike</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Hybrid Bike</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>BMX</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Fixie</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Folding Bike</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Electric Bike</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>