force-app/main/default/objects/Asset/fields/N_K_R__c.field-meta.xml
<CustomField>
    <fullName>N_K_R__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>N.K.R</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Risks (N.K.R)</relationshipLabel>
    <relationshipName>NKR</relationshipName>
    <type>Lookup</type>
</CustomField>