force-app/main/default/objects/Asset/fields/Nama_Pemilik__c.field-meta.xml
<CustomField>
    <fullName>Nama_Pemilik__c</fullName>
    <label>Nama Pemilik</label>
    <length>255</length>
    <type>Text</type>
</CustomField>