force-app/main/default/objects/Asset/fields/Name_of_Obligee__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Obligee__c</fullName>
    <label>Name of Obligee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>