force-app/main/default/objects/Asset/fields/NIK_Passport_No__c.field-meta.xml
<CustomField>
    <fullName>NIK_Passport_No__c</fullName>
    <label>NIK / Passport No.</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>