force-app/main/default/objects/Asset/fields/NIPER__c.field-meta.xml
<CustomField>
    <fullName>NIPER__c</fullName>
    <label>NIPER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>