force-app/main/default/objects/Asset/fields/No_Of_Person_to_Cover__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Person_to_Cover__c</fullName>
    <label>No. Of Person to Cover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>