force-app/main/default/objects/Asset/fields/No_Serial_Rangka_Sepeda__c.field-meta.xml
<CustomField>
    <fullName>No_Serial_Rangka_Sepeda__c</fullName>
    <label>No Serial/ Rangka Sepeda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>