force-app/main/default/objects/Asset/fields/NPWP__c.field-meta.xml
<CustomField>
    <fullName>NPWP__c</fullName>
    <label>NPWP</label>
    <length>16</length>
    <type>Text</type>
</CustomField>