force-app/main/default/objects/Asset/fields/Number_of_Player__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Player__c</fullName>
    <label>Number of Player</label>
    <length>3</length>
    <type>Text</type>
</CustomField>