force-app/main/default/objects/Asset/fields/Number_of_Seats__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Seats__c</fullName>
    <label>Number of Seats</label>
    <length>255</length>
    <type>Text</type>
</CustomField>