force-app/main/default/objects/Asset/fields/Occupation_Code__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk Type</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>