force-app/main/default/objects/Asset/fields/Occupation_Description__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Description__c</fullName>
    <formula>Occupation_Code__r.Description__c</formula>
    <label>Occupation Description</label>
    <type>Text</type>
</CustomField>