force-app/main/default/objects/Asset/fields/On_Shipment__c.field-meta.xml
<CustomField>
    <fullName>On_Shipment__c</fullName>
    <label>On Shipment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>