force-app/main/default/objects/Asset/fields/Opportunity_Facultative__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Facultative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Facultative</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Risks (Opportunity Facultative)</relationshipLabel>
    <relationshipName>Risks2</relationshipName>
    <type>Lookup</type>
</CustomField>