force-app/main/default/objects/Asset/fields/Origin_Country__c.field-meta.xml
<CustomField>
    <fullName>Origin_Country__c</fullName>
    <label>Origin Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Master_Country</valueSetName>
    </valueSet>
</CustomField>