force-app/main/default/objects/Asset/fields/Origin_Risk__c.field-meta.xml
<CustomField>
    <fullName>Origin_Risk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Risk</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>