force-app/main/default/objects/Asset/fields/Pabean__c.field-meta.xml
<CustomField>
    <fullName>Pabean__c</fullName>
    <label>Pabean</label>
    <length>255</length>
    <type>Text</type>
</CustomField>