force-app/main/default/objects/Asset/fields/Par__c.field-meta.xml
<CustomField>
    <fullName>Par__c</fullName>
    <label>Par</label>
    <length>2</length>
    <type>Text</type>
</CustomField>