force-app/main/default/objects/Asset/fields/parking_place__c.field-meta.xml
<CustomField>
    <fullName>parking_place__c</fullName>
    <label>parking place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>