force-app/main/default/objects/Asset/fields/Partition_Code__c.field-meta.xml
<CustomField>
    <fullName>Partition_Code__c</fullName>
    <label>Partition Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partition_Code</valueSetName>
    </valueSet>
</CustomField>