force-app/main/default/objects/Asset/fields/PIB_PIBT_SPKPBM_Date__c.field-meta.xml
<CustomField>
    <fullName>PIB_PIBT_SPKPBM_Date__c</fullName>
    <label>PIB/PIBT/SPKPBM Date</label>
    <type>Date</type>
</CustomField>