force-app/main/default/objects/Asset/fields/PIB_PIBT_SPKPBM_No__c.field-meta.xml
<CustomField>
    <fullName>PIB_PIBT_SPKPBM_No__c</fullName>
    <label>PIB/PIBT/SPKPBM No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>