force-app/main/default/objects/Asset/fields/PL_Doc_Date__c.field-meta.xml
<CustomField>
    <fullName>PL_Doc_Date__c</fullName>
    <label>PL Doc Date</label>
    <type>Date</type>
</CustomField>