force-app/main/default/objects/Asset/fields/PL_Doc_Number__c.field-meta.xml
<CustomField>
    <fullName>PL_Doc_Number__c</fullName>
    <label>PL Doc Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>