force-app/main/default/objects/Asset/fields/Place_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Birth__c</fullName>
    <label>Place of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>