force-app/main/default/objects/Asset/fields/Place_Port_of_Destination__c.field-meta.xml
<CustomField>
    <fullName>Place_Port_of_Destination__c</fullName>
    <label>Place/Port of Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>