force-app/main/default/objects/Asset/fields/Player_Classification__c.field-meta.xml
<CustomField>
    <fullName>Player_Classification__c</fullName>
    <label>Player Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Amateur</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Pro Player</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>