force-app/main/default/objects/Asset/fields/PO_Doc_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Doc_Number__c</fullName>
    <label>PO Doc Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>