force-app/main/default/objects/Asset/fields/Policy_Fire_No__c.field-meta.xml
<CustomField>
    <fullName>Policy_Fire_No__c</fullName>
    <label>Policy (Fire) No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>