force-app/main/default/objects/Asset/fields/Port_Of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Port_Of_Origin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port Of Origin</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Risks (Port Of Origin)</relationshipLabel>
    <relationshipName>Risks4</relationshipName>
    <type>Lookup</type>
</CustomField>