force-app/main/default/objects/Asset/fields/Premises__c.field-meta.xml
<CustomField>
    <fullName>Premises__c</fullName>
    <label>Premises</label>
    <length>255</length>
    <type>Text</type>
</CustomField>