force-app/main/default/objects/Asset/fields/Project_Detail__c.field-meta.xml
<CustomField>
    <fullName>Project_Detail__c</fullName>
    <label>Project Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Project_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1001</fullName>
                <label>Hospital, clinic</label>
            </value>
            <value>
                <fullName>1002</fullName>
                <label>Hotel, resort</label>
            </value>
            <value>
                <fullName>1003</fullName>
                <label>Nursing, residential care facility</label>
            </value>
            <value>
                <fullName>1004</fullName>
                <label>Residential building, housing scheme</label>
            </value>
            <value>
                <fullName>1005</fullName>
                <label>Agricultural products, livestock farm</label>
            </value>
            <value>
                <fullName>1006</fullName>
                <label>Fish/seafood farm</label>
            </value>
            <value>
                <fullName>1007</fullName>
                <label>Forestry/logging facility</label>
            </value>
            <value>
                <fullName>1008</fullName>
                <label>Exhibition/convention centre</label>
            </value>
            <value>
                <fullName>1009</fullName>
                <label>Office/commercial building</label>
            </value>
            <value>
                <fullName>1010</fullName>
                <label>Shopping centre, department store, supermarket</label>
            </value>
            <value>
                <fullName>1011</fullName>
                <label>Church, religious centre</label>
            </value>
            <value>
                <fullName>1012</fullName>
                <label>Cinema, theater, concert hall</label>
            </value>
            <value>
                <fullName>1013</fullName>
                <label>Museum, gallery</label>
            </value>
            <value>
                <fullName>1014</fullName>
                <label>Restaurant, bar, catering facility, discotheque</label>
            </value>
            <value>
                <fullName>1015</fullName>
                <label>Sport/leisure facility</label>
            </value>
            <value>
                <fullName>1016</fullName>
                <label>Stadium</label>
            </value>
            <value>
                <fullName>1017</fullName>
                <label>Theme/amusement park</label>
            </value>
            <value>
                <fullName>1018</fullName>
                <label>Military facilities</label>
            </value>
            <value>
                <fullName>1019</fullName>
                <label>Public administration building</label>
            </value>
            <value>
                <fullName>1020</fullName>
                <label>Public order building</label>
            </value>
            <value>
                <fullName>1021</fullName>
                <label>School</label>
            </value>
            <value>
                <fullName>1022</fullName>
                <label>University, research centre</label>
            </value>
            <value>
                <fullName>1023</fullName>
                <label>Coal mine open pit</label>
            </value>
            <value>
                <fullName>1024</fullName>
                <label>Coal mine underground</label>
            </value>
            <value>
                <fullName>1025</fullName>
                <label>Coal processing/washing plant</label>
            </value>
            <value>
                <fullName>1026</fullName>
                <label>Ore processing plant</label>
            </value>
            <value>
                <fullName>1027</fullName>
                <label>Ore/minerals mine open pit</label>
            </value>
            <value>
                <fullName>1028</fullName>
                <label>Ore/minerals mine underground</label>
            </value>
            <value>
                <fullName>1029</fullName>
                <label>Salt mine open pit</label>
            </value>
            <value>
                <fullName>1030</fullName>
                <label>Stone, gravel, sand extraction/processing plant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>