force-app/main/default/objects/Asset/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>11</fullName>
                <label>Accomodation, health care</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Agriculture, aquaculture, forestry</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Commerce, trade</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Culture, recreation</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Education, public facilities</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Exploitation of resources, mining</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>General infrastructure</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Oil &amp; Gas processing and transportation</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Power generation and transmission</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Production and manufacturing: automotive</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Production and manufacturing: chemical, pharma</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Production and manufacturing: machinery, electrics, electronics</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Production and manufacturing: metals</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Production and manufacturing: non-metallic products</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Production and manufacturing: textile, leather</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>Production and manufacturing: wood, paper</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>Storage &amp; Warehousing</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>Telecommunication, EDP, Broadcasting</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>Production and manufacturing: food, beverage, tobacco</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Traffic infrastructure</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>Utilities</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>