force-app/main/default/objects/Asset/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Province</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Assets (Province)</relationshipLabel>
    <relationshipName>Assets3</relationshipName>
    <type>Lookup</type>
</CustomField>