force-app/main/default/objects/Asset/fields/Province_From__c.field-meta.xml
<CustomField>
    <fullName>Province_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Province (From)</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Risks (Province (From))</relationshipLabel>
    <relationshipName>Risks1</relationshipName>
    <type>Lookup</type>
</CustomField>