force-app/main/default/objects/Asset/fields/Province_To__c.field-meta.xml
<CustomField>
    <fullName>Province_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Province (To)</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Risks (Province (To))</relationshipLabel>
    <relationshipName>Risks4</relationshipName>
    <type>Lookup</type>
</CustomField>