force-app/main/default/objects/Asset/fields/Purchase_Doc_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Doc_Number__c</fullName>
    <label>Purchase Doc Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>