force-app/main/default/objects/Asset/fields/Purchase_Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Doc_Type__c</fullName>
    <label>Purchase Doc Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>L/C</fullName>
            </value>
            <value>
                <fullName>PIB</fullName>
            </value>
            <value>
                <fullName>PEB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>