force-app/main/default/objects/Asset/fields/Purchasing_Document__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Document__c</fullName>
    <label>Purchasing Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>