force-app/main/default/objects/Asset/fields/Quota_Share_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quota_Share_Amount__c</fullName>
    <label>Quota Share Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>