force-app/main/default/objects/Asset/fields/Rate_All_Coverages__c.field-meta.xml
<CustomField>
    <fullName>Rate_All_Coverages__c</fullName>
    <label>Rate All Coverages</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>