force-app/main/default/objects/Asset/fields/Register_No__c.field-meta.xml
<CustomField>
    <fullName>Register_No__c</fullName>
    <formula>SKEP_No__r.Register_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Register No</label>
    <type>Text</type>
</CustomField>