force-app/main/default/objects/Asset/fields/Related_to_Asset__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup reference for Perlengkapan Tambahan</description>
    <label>Related to Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Assets (Related to Asset)</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>