force-app/main/default/objects/Asset/fields/Relation__c.field-meta.xml
<CustomField>
    <fullName>Relation__c</fullName>
    <label>Relation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>