force-app/main/default/objects/Asset/fields/Risk__c.field-meta.xml
<CustomField>
    <fullName>Risk__c</fullName>
    <formula>RecordType.Name = &apos;Risk&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk</label>
    <type>Checkbox</type>
</CustomField>