force-app/main/default/objects/Asset/fields/risk_address__c.field-meta.xml
<CustomField>
    <fullName>risk_address__c</fullName>
    <label>Risk Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>