force-app/main/default/objects/Asset/fields/Risk_Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Risk_Address_ID__c</fullName>
    <label>Risk Address ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>