force-app/main/default/objects/Asset/fields/Risk_Code__c.field-meta.xml
<CustomField>
    <fullName>Risk_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For COB 603</description>
    <label>Risk Code</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Assets (Risk Code)</relationshipLabel>
    <relationshipName>Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>