force-app/main/default/objects/Asset/fields/Risk_Description__c.field-meta.xml
<CustomField>
    <fullName>Risk_Description__c</fullName>
    <description>For COB 951 Risk Profile Section</description>
    <label>Risk Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>